fixed hours arrow/border, updated info area size & spacing

--- a/src/components/ReactGoogleMaps.css
+++ b/src/components/ReactGoogleMaps.css
@@ -3,7 +3,7 @@
   bottom: 0;
   display: flex;
   flex-direction: column;
-  width: 90%;
+  width: 95%;
   left: 50%;
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
